# HERON-ground-station

./: .gitignore  NOTES  README.md  SHA256.py  crc.py  crc16.c  make_message.py  record.grc  text.txt  tx.grc  tx_for_bidirectional.py  tx_test_suite.py  tx_test_suite_20190817.py
Heron Mk. II Control Panel/: app.py  functions.json
automation/: automate.py  propagate.py  rx_wrapper.py  tx_wrapper.py
client/: bdsat.py  doppler.py  esttc_interface.py  iping.py  iping_loopback.py  iping_pong.py  iss.py  listen.py  ping_ax25.py  ping_bdsat.py  ping_heron.py  predict.py  run_trx.py  sat.py  stations.py
gnuradio/: .esttc_framer.grc  .example.py.kate-swp  ESTTC_Rx_Tx.grc  esttc_deframer.grc  esttc_framer.grc  esttc_interface.py  esttc_loopback.grc  esttc_rx.grc  esttc_rx_tx.grc  esttc_rx_tx_epy_block_0.py  esttc_rx_tx_epy_block_1.py  esttc_tx.grc  example.py  toptek.py
hackrf_test/: FM_Radio_rx.grc  FM_tx_rx.grc  GFKS_Heron_Packet_tx_rx.grc  GFSK_tx_rx.grc  README.md  cw_loopback.grc  enable_clocks.sh  hackrf_remote_control.grc  nbfm_loopback.grc  wbfm_loopback.grc
interface/: commands.py  tx_for_bidirectional.py
packet_creation/: crc.py  make_message.py
packet_interpretation/: rx_decode.py
pending_review/: README.md  tx_for_bidirectional.py  tx_repeat_ping.py
recordings/: potentialpackets
rx/: log.py  rx_debug.grc  rx_debug.py  rx_quaddemod.grc  (+1 more)
server/: CMakeLists.txt  HERON_gs.py  HERON_gs.py.in  HERON_gs.service.in  doppler.py  doppler.service  doppler.service.in  gr-gpredict-doppler.py  install.sh  server.py
server/transceivers/: bladerf_trx.grc  hackrf_trx.grc  pluto_trx.grc
server/transceivers/deprecated/: pluto_cw_trx.grc
(+62 files in other folders)
